# BeetleOS

./: .gitignore  README.md
StudyDoc/: All.md
StudyDoc/01/: 从代码到机器运行.md
StudyDoc/02/: 内核结构与设计.md
StudyDoc/03/: 硬件基础--CPU工作模式.md  硬件基础1--CPU工作模式.md  硬件基础2--程序中地址转换.md  硬件基础3--缓存.md
StudyDoc/04/: 01--并发操作解决数据同步的4种方法.md
StudyDoc/05/: 启动初始化01-搭建启动环境.md  启动初始化02-建造二级引导器.md  启动初始化03-机器信息收集与初始化.md
os/: CMakeLists.txt
os/base/include/: base_macro.h  base_string.h  base_template.h  base_type.h  kernel_base.h
os/init_ldr/: CMakeLists.txt
os/init_ldr/include/: check_cpu.h  fs.h  graph.h  imgmgr_header.h  init_head.h  initldr.h  io.h  ldr_entry.h  ldr_type.h  mach_start_param.h  vga_str.h  vgastr.h
os/init_ldr/src/: check_cpu.cc  check_cpu_memory.cc  fs.cc  fs_parse.cc  graph.cc  init_head.cc  init_img_head.asm  init_ldr_entry.asm  init_ldr_head.asm  init_save_page.cc  ldr_entry.cc  ldr_type.cc  mach_start_param.cc  real_int_save.asm  vga_str.cc  vgastr.cc
os/initldr/: Makefile
os/initldr/include/: base_type.h  fs_parse.h  graph.h  ldr_type.h  vgastr.h
os/initldr/src/: init_head.cc  init_img_head.asm  vgastr.cc
